--- a/config/prod/src/main/resources/config.properties
+++ b/config/prod/src/main/resources/config.properties
@@ -129,7 +129,7 @@ admin.password=admin
 
 #
 # Integration test parameters
-# viewer.user must validate with your security setup using test.password
+# viewer.user must validate with your security setup using viewer.password
 # bad.user must not validate with your security setup
 #
 viewer.user=guest
