--- a/rest/src/main/webapp/WEB-INF/web.xml
+++ b/rest/src/main/webapp/WEB-INF/web.xml
@@ -102,4 +102,8 @@
 		<filter-name>ApiOriginFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+  
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>  
 </web-app>
