--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -18,12 +18,12 @@ hibernate.use_sql_comments=false
 hibernate.jdbc.batch_size=60
 hibernate.jdbc.default_batch_fetch_size=32
 
-hibernate.c3p0.min_size=10
-hibernate.c3p0.max_size=20
-hibernate.c3p0.acquire_increment=1
-hibernate.c3p0.idle_test_period=3000
-hibernate.c3p0.max_statements=50
-hibernate.c3p0.timeout=1800
+#hibernate.c3p0.min_size=10
+#hibernate.c3p0.max_size=20
+#hibernate.c3p0.acquire_increment=1
+#hibernate.c3p0.idle_test_period=3000
+#hibernate.c3p0.max_statements=50
+#hibernate.c3p0.timeout=1800
 
 
 #
