Various changes to 20150731 delta and to support mojo test suites.

--- a/config/prod/src/main/resources/config.properties
+++ b/config/prod/src/main/resources/config.properties
@@ -141,10 +141,10 @@ bad.password=i_am_a_bad_password
 # Exception processing emails
 #
 mail.enabled=true
-mail.smtp.user=EDIT_THIS
+mail.smtp.user=bcarlsen@westcoastinformatics.com
 mail.smtp.password=
 mail.smtp.host=localhost
 mail.smtp.port=587
 mail.smtp.starttls.enable=false
 mail.smtp.auth=false
-mail.smtp.to=EDIT_THIS
+mail.smtp.to=bcarlsen@westcoastinformatics.com
