--- a/config/src/main/resources/nginx/virtual.conf
+++ b/config/src/main/resources/nginx/virtual.conf
@@ -1,23 +1,36 @@
-server {
-    server_name snomed.term-server.com;
-    access_log /var/log/nginx/sct.access.log main;
+  server {
+    server_name snomed.terminology.tools;
+    listen 80;
+    rewrite ^ https://$host$request_uri permanent;
+  }
+
+
+  server {
+    server_name snomed.terminology.tools;
+    listen 443 ssl;
+    access_log /var/log/nginx/sct.access.log;
+
+    ssl_certificate     /etc/ssl/newcerts/48e2f3aa356c4592.crt;
+    ssl_certificate_key /etc/ssl/private/terminology.tools.key;
 
     location / {
-        proxy_pass http://localhost:8080/;
+        proxy_pass http://localhost:8080/term-server-rest/;
+        proxy_read_timeout 300;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto "https";
+        proxy_set_header X-Url-Scheme $scheme;
+        proxy_redirect off;
 
-     if ( -f /opt/maint/maintain.html){
+      if ( -f /opt/maint/maintain.html){
         return 503;
-     }
+      }
     }
-s}
+    error_page 503 @maintenance;
 
-error_page 503 @maintenance;
-
-location @maintenance {
+    location @maintenance {
                 root /opt/maint;
                 rewrite ^(.*)$ /maintain.html break;
-   }
-
-
-}
-
+    }
+  }
