--- a/config/prod/src/main/resources/config.properties
+++ b/config/prod/src/main/resources/config.properties
@@ -104,7 +104,7 @@ action.service.timeout=7200000
 #
 # Webapp base URL (currently unused)
 #
-base.url=http://snomed.terminology.tools/
+base.url=http://snomed.terminology.tools
 
 #
 # URL for security service
