--- a/admin/lucene/pom.xml
+++ b/admin/lucene/pom.xml
@@ -34,7 +34,7 @@
           <plugin>
             <groupId>org.ihtsdo.otf.term-server</groupId>
             <artifactId>term-server-admin-mojo</artifactId>
-            <version>${releaseVersion}</version>
+            <version>${project.version}</version>
             <executions>
               <execution>
                 <id>reindex</id>
