--- a/admin/release/pom.xml
+++ b/admin/release/pom.xml
@@ -38,7 +38,7 @@
           <plugin>
             <groupId>org.ihtsdo.otf.term-server</groupId>
             <artifactId>term-server-admin-mojo</artifactId>
-            <version>${releaseVersion}</version>
+            <version>${project.version}</version>
             <executions>
               <execution>
                 <id>start-editing-cycle</id>
@@ -68,7 +68,7 @@
           <plugin>
             <groupId>org.ihtsdo.otf.term-server</groupId>
             <artifactId>term-server-admin-mojo</artifactId>
-            <version>${releaseVersion}</version>
+            <version>${project.version}</version>
             <executions>
               <execution>
                 <id>release-rf2-begin</id>
@@ -98,7 +98,7 @@
           <plugin>
             <groupId>org.ihtsdo.otf.term-server</groupId>
             <artifactId>term-server-admin-mojo</artifactId>
-            <version>${releaseVersion}</version>
+            <version>${project.version}</version>
             <executions>
               <execution>
                 <id>release-rf2</id>
@@ -127,7 +127,7 @@
           <plugin>
             <groupId>org.ihtsdo.otf.term-server</groupId>
             <artifactId>term-server-admin-mojo</artifactId>
-            <version>${releaseVersion}</version>
+            <version>${project.version}</version>
             <executions>
               <execution>
                 <id>release-rf2-finish</id>
