More fixes for snapshot/full load and mojo test suites.

--- a/jpa-services/pom.xml
+++ b/jpa-services/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>term-server-jpa-services</artifactId>
-  <name>Termionlogy server JPA service implementations. </name>
+  <name>Terminology server JPA service implementations. </name>
   <description>JPA implementations of terminology services.</description>
 
   <!-- Declare Project Dependency Versions -->
