--- a/admin/loader/pom.xml
+++ b/admin/loader/pom.xml
@@ -174,6 +174,7 @@
                 </goals>
                 <configuration>
                   <terminology>${terminology}</terminology>
+                  <version>${version}</version>
                   <server>${server}</server>
                 </configuration>
               </execution>
@@ -185,7 +186,7 @@
 
     <!-- Add a project, specify -Drun.config=... -Dterminology=... -->
     <profile>
-      <id>AddProject</id>
+      <id>Project</id>
       <build>
         <plugins>
           <plugin>
