--- a/config/src/main/resources/nginx/virtual.conf
+++ b/config/src/main/resources/nginx/virtual.conf
@@ -6,13 +6,17 @@
 
 
   server {
+
     server_name snomed.terminology.tools;
     listen 443 ssl;
     access_log /var/log/nginx/sct.access.log;
 
-    ssl_certificate     /etc/ssl/newcerts/48e2f3aa356c4592.crt;
+    ssl_certificate     /etc/ssl/newcerts/bundle.crt;
     ssl_certificate_key /etc/ssl/private/terminology.tools.key;
 
+    location ~ ^\/$ {
+                rewrite ^ /index.html;
+    }
     location / {
         proxy_pass http://localhost:8080/term-server-rest/;
         proxy_read_timeout 300;
