--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -3,12 +3,14 @@
 # Database Connection Parameters
 #
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.connection.useUnicode=true
+hibernate.connection.characterEncoding=UTF-8
+hibernate.connection.charSet=UTF-8
 javax.persistence.jdbc.driver=com.mysql.jdbc.Driver
 # For testing use tsdbtest
 javax.persistence.jdbc.url=jdbc:mysql://127.0.0.1:3306/tsdb
 javax.persistence.jdbc.user=root
 javax.persistence.jdbc.password=EDIT_THIS
-
 #
 # JPA settings
 #
