--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -30,8 +30,8 @@
     <maven.invoker.version>2.2</maven.invoker.version>
 
     <!-- Set third-party dependency versions -->
-    <hibernate.version>4.3.8.Final</hibernate.version>
-    <hibernate.em.version>4.3.8.Final</hibernate.em.version>
+    <hibernate.version>4.3.9.Final</hibernate.version>
+    <hibernate.em.version>4.3.9.Final</hibernate.em.version>
     <javax.transaction.version>1.1</javax.transaction.version>
     <hibernate.search.version>5.1.1.Final</hibernate.search.version>
     <hibernate.entitymanager.version>4.1.0.Final</hibernate.entitymanager.version>
@@ -116,8 +116,8 @@
         <version>${hibernate.search.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.mchange</groupId>
-        <artifactId>c3p0</artifactId>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-c3p0</artifactId>
         <version>${c3p0.version}</version>
       </dependency>
       <dependency>
