--- a/rest/src/main/resources/log4j.properties
+++ b/rest/src/main/resources/log4j.properties
@@ -5,6 +5,8 @@ log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = %d{yyyy-MM-dd_HH:mm:ss.SSS} %p %c %M - %m%n
  
 log4j.logger.org.hibernate = WARN
- 
+
+log4j.logger.com.mchange = INFO
+
 log4j.logger.org.ihtsdo = DEBUG
 org.apache.commons.httpclient.params = INFO
