Mobile site enhancements.

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -222,7 +222,7 @@
               <directory>src/main/webapp</directory>
               <filtering>true</filtering>
               <includes>
-                <include>index.html</include>
+                <include>index*.html</include>
                 <include>swagger.html</include>
               </includes>
             </resource>
@@ -230,7 +230,7 @@
               <directory>src/main/webapp</directory>
               <filtering>false</filtering>
               <excludes>
-                <exclude>index.html</exclude>
+                <exclude>index*.html</exclude>
                 <exclude>swagger.html</exclude>
               </excludes>
             </resource>
