Fixes and improvements.

--- a/config/prod/src/main/resources/config.properties
+++ b/config/prod/src/main/resources/config.properties
@@ -26,8 +26,8 @@ hibernate.connection.provider_class=org.hibernate.connection.C3P0ConnectionProvi
 hibernate.c3p0.acquire_increment=1
 hibernate.c3p0.idle_test_period=300
 hibernate.c3p0.maxConnectionAge=3600
-hibernate.c3p0.timeoue=120
-hibernate.c3p0.max_size=300
+hibernate.c3p0.timeout=120
+hibernate.c3p0.max_size=64
 hibernate.c3p0.min_size=5
 hibernate.c3p0.preferredTestQuery=select 1;
 
