--- a/config/dev-windows/src/main/resources/config.properties
+++ b/config/dev-windows/src/main/resources/config.properties
@@ -11,6 +11,7 @@ javax.persistence.jdbc.driver=com.mysql.jdbc.Driver
 javax.persistence.jdbc.url=jdbc:mysql://127.0.0.1:3306/tsdb
 javax.persistence.jdbc.user=root
 javax.persistence.jdbc.password=EDIT_THIS
+
 #
 # JPA settings
 #
@@ -20,12 +21,15 @@ hibernate.use_sql_comments=false
 hibernate.jdbc.batch_size=60
 hibernate.jdbc.default_batch_fetch_size=32
 
-#hibernate.c3p0.min_size=10
-#hibernate.c3p0.max_size=20
-#hibernate.c3p0.acquire_increment=1
-#hibernate.c3p0.idle_test_period=3000
-#hibernate.c3p0.max_statements=50
-#hibernate.c3p0.timeout=1800
+# c3p0 config
+hibernate.connection.provider_class=org.hibernate.connection.C3P0ConnectionProvider
+hibernate.c3p0.acquire_increment=1
+hibernate.c3p0.idle_test_period=300
+hibernate.c3p0.maxConnectionAge=3600
+hibernate.c3p0.timeout=120
+hibernate.c3p0.max_size=64
+hibernate.c3p0.min_size=5
+hibernate.c3p0.preferredTestQuery=select 1;
 
 
 #
