Add RF2 sampling capability.

--- a/admin/loader/pom.xml
+++ b/admin/loader/pom.xml
@@ -31,10 +31,12 @@
     <terminology></terminology>
     <!-- The terminology version -->
     <version>latest</version>
-    <!-- The input directory for RF2 loads -->
+    <!-- The input directory  -->
     <input.dir></input.dir>
-    <!-- The input file for ClaML loads -->
+    <!-- The input file -->
     <input.file></input.file>
+    <!-- The output dir -->
+    <output.dir></output.dir>
     <!-- Whether to run against server (default false) -->
     <server>false</server>
   </properties>
@@ -117,6 +119,8 @@
                 </goals>
                 <configuration>
                   <inputDir>${input.dir}</inputDir>
+                  <inputFile>${input.file}</inputFile>
+                  <outputDir>${output.dir}</outputDir>
                   <server>${server}</server>
                 </configuration>
               </execution>
