--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -76,11 +76,9 @@
               <includes>
                 <include>**/org/ihtsdo/otf/ts/test/rest/*Test.java</include>
               </includes>
-              <excludes>
-              <!-- Still working on these -->
-                <exclude>**/org/ihtsdo/otf/ts/test/rest/Content*Test.java</exclude>
-                <exclude>**/org/ihtsdo/otf/ts/test/rest/History*Test.java</exclude>
-              </excludes>
+
+              <!-- Still working on these <excludes><exclude>**/org/ihtsdo/otf/ts/test/rest/Content*Test.java</exclude> 
+                <exclude>**/org/ihtsdo/otf/ts/test/rest/History*Test.java</exclude> </excludes> -->
               <additionalClasspathElements>
                 <additionalClasspathElement>src/main/resources</additionalClasspathElement>
               </additionalClasspathElements>
