--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
   <!-- Module Metadata -->
   <!-- Parent is TBD <parent> <groupId>org.ihtsdo.otf</groupId> <artifactId>otf-parent</artifactId> 
-    <version>1.1.0-SNAPSHOT</version> <relativePath/> </parent> -->
+    <version>1.1.0.Release</version> <relativePath/> </parent> -->
 
   <groupId>org.ihtsdo.otf.term-server</groupId>
   <artifactId>term-server-service</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0.Release</version>
   <packaging>pom</packaging>
   <name>IHTSDO RF2 Data Model</name>
   <description>Aggregator and parent for interfaces and default implementations of RF2 data model for OTF services</description>
