--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.ihtsdo.otf.term-server</groupId>
     <artifactId>term-server-parent</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0.Release</version>
     <relativePath>../parent</relativePath>
   </parent>
 
