Move integration tests. Fix URLs.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -254,12 +254,8 @@
         <version>10.0.1</version>
       </dependency>
 
-      <!-- Classifier 
-      <dependency>
-        <groupId>au.csiro</groupId>
-        <artifactId>snorocket-snapi</artifactId>
-        <version>${snorocket.snapi.version}</version>
-      </dependency>-->
+      <!-- Classifier <dependency> <groupId>au.csiro</groupId> <artifactId>snorocket-snapi</artifactId> 
+        <version>${snorocket.snapi.version}</version> </dependency> -->
 
     </dependencies>
   </dependencyManagement>
