--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -89,28 +89,54 @@
       </build>
     </profile>
 
-    <!-- REST integration tests -->
-    <profile>
-      <id>mojo</id>
-      <build>
-        <plugins>
-          <!-- Add src/main/resources to the classpath -->
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <includes>
-                <include>**/org/ihtsdo/otf/ts/test/mojo/*Test.java</include>
-              </includes>
-              <additionalClasspathElements>
-                <additionalClasspathElement>src/main/resources</additionalClasspathElement>
-              </additionalClasspathElements>
-              <skipTests>${skipTests}</skipTests>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
+      <!-- JPA integration tests -->
+      <profile>
+        <id>rest</id>
+        <build>
+          <plugins>
+            <!-- Add src/main/resources to the classpath -->
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <includes>
+                  <include>**/org/ihtsdo/otf/ts/test/rest/*Test.java</include>
+                </includes>
+
+                <!-- Still working on these <excludes><exclude>**/org/ihtsdo/otf/ts/test/rest/Content*Test.java</exclude> 
+                  <exclude>**/org/ihtsdo/otf/ts/test/rest/History*Test.java</exclude> </excludes> -->
+                <additionalClasspathElements>
+                  <additionalClasspathElement>src/main/resources</additionalClasspathElement>
+                </additionalClasspathElements>
+                <skipTests>${skipTests}</skipTests>
+              </configuration>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+      
+      <!-- MOJO integration tests -->
+      <profile>
+        <id>mojo</id>
+        <build>
+          <plugins>
+            <!-- Add src/main/resources to the classpath -->
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <includes>
+                  <include>**/org/ihtsdo/otf/ts/test/mojo/*Test.java</include>
+                </includes>
+                <additionalClasspathElements>
+                  <additionalClasspathElement>src/main/resources</additionalClasspathElement>
+                </additionalClasspathElements>
+                <skipTests>${skipTests}</skipTests>
+              </configuration>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+    </profiles>
 
 </project>
